fixed alignment stack container, site decription

--- a/src/index.css
+++ b/src/index.css
@@ -229,7 +229,7 @@ p {
 }
 
 .techWrapperWrapper {
-  text-align: center;
+  justify-content: center;
 }
 
 .techTitle {
